Fix too small newpost images in search results

--- a/theme/common.css
+++ b/theme/common.css
@@ -691,6 +691,7 @@ div.overboxctrl .overboxcenter {
   width: auto;
   min-height: 5px;
   padding-top: 7px;
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
 
