--- a/theme/stylesheet_index.css
+++ b/theme/stylesheet_index.css
@@ -1163,6 +1163,7 @@ div.overboxctrl .overboxcenter {
   width: auto;
   min-height: 5px;
   padding-top: 7px;
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
 
